cambio de letra nav

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ nav ul li a {
     text-decoration: solid;
     color: black;
     font-size: medium;
-    font-family: fantasy;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 100px;
 
 }
